--- a/index.html
+++ b/index.html
@@ -55,11 +55,105 @@
          </div>
       </div>
    </header>
+
    <!-- Promo logo -->
    <section class="promo">
       <div class="container promo__wrap">
-         <h1 class="promo__h1">THE BRAND<br><span class="promo__span">OF LUXERIOUS</span><span
-               class="promo__span-color">FASHION</span></h1>
+         <h1 class="promo__h1">THE BRAND<br><span class="promo__span">OF LUXERIOUS <span
+                  class="promo__span-color">FASHION</span> </span></h1>
+      </div>
+   </section>
+
+   <!-- Categories -->
+   <section class="categories">
+      <div class="container categories__wrap">
+         <!-- card-1  -->
+         <a href="#" class="categories__card categories__card1">
+            <h5 class="categories-wrap__h5">30% OFF</h5>
+            <h3 class="categories-wrap__h3">FOR WOMEN</h3>
+         </a>
+         <!-- card-2  -->
+         <a href="pages/catalog.html" class="categories__card categories__card2">
+            <h5 class="categories-wrap__h5">HOT DEAL</h5>
+            <h3 class="categories-wrap__h3">FOR MEN</h3>
+         </a>
+         <!-- card-3  -->
+         <a href="#" class="categories__card categories__card3">
+            <h5 class="categories-wrap__h5">NEW ARRIVALS</h5>
+            <h3 class="categories-wrap__h3">FOR KIDS</h3>
+         </a>
+         <!-- card-4  -->
+         <a href="#" class="categories__card categories__card4">
+            <h5 class="categories-wrap__h5">LUXIROUS & TRENDY</h5>
+            <h3 class="categories-wrap__h3">ACCESORIES</h3>
+         </a>
+      </div>
+   </section>
+
+   <!-- Product  -->
+   <section class="product">
+      <div class="container product__wrap">
+         <h2 class="product__h2">Fetured Items
+         </h2>
+         <p class="product__text">Shop for items based on what we featured in this week
+         </p>
+         <div class="product__grid-wrap">
+            <!-- Card-1  -->
+            <div class="product__card">
+               <img src="assets/img/main/product-card1.jpg" alt="product card" class="product-card__img">
+               <a href="pages/cart.html" class="product-card__name" target="_blank">
+                  <h5 class="product-card__h5">ELLERY X M'O CAPSULE</h5>
+                  <p class="product-card__text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                  <p class="product-card__text-options">$52.00</p>
+               </a>
+            </div>
+            <!-- Card-2  -->
+            <div class="product__card">
+               <img src="assets/img/main/product-card2.jpg" alt="product card" class="product-card__img">
+               <a href="pages/cart.html" class="product-card__name" target="_blank">
+                  <h5 class="product-card__h5">ELLERY X M'O CAPSULE</h5>
+                  <p class="product-card__text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                  <p class="product-card__text-options">$52.00</p>
+               </a>
+            </div>
+            <!-- Card-3  -->
+            <div class="product__card">
+               <img src="assets/img/main/product-card3.jpg" alt="product card" class="product-card__img">
+               <a href="pages/cart.html" class="product-card__name" target="_blank">
+                  <h5 class="product-card__h5">ELLERY X M'O CAPSULE</h5>
+                  <p class="product-card__text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                  <p class="product-card__text-options">$52.00</p>
+               </a>
+            </div>
+            <!-- Card-4  -->
+            <div class="product__card">
+               <img src="assets/img/main/product-card4.jpg" alt="product card" class="product-card__img">
+               <a href="pages/cart.html" class="product-card__name" target="_blank">
+                  <h5 class="product-card__h5">ELLERY X M'O CAPSULE</h5>
+                  <p class="product-card__text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                  <p class="product-card__text-options">$52.00</p>
+               </a>
+            </div>
+            <!-- Card-5  -->
+            <div class="product__card">
+               <img src="assets/img/main/product-card5.jpg" alt="product card" class="product-card__img">
+               <a href="pages/cart.html" class="product-card__name" target="_blank">
+                  <h5 class="product-card__h5">ELLERY X M'O CAPSULE</h5>
+                  <p class="product-card__text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                  <p class="product-card__text-options">$52.00</p>
+               </a>
+            </div>
+            <!-- Card-6  -->
+            <div class="product__card">
+               <img src="assets/img/main/product-card6.jpg" alt="product card" class="product-card__img">
+               <a href="pages/cart.html" class="product-card__name" target="_blank">
+                  <h5 class="product-card__h5">ELLERY X M'O CAPSULE</h5>
+                  <p class="product-card__text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                  <p class="product-card__text-options">$52.00</p>
+               </a>
+            </div>
+         </div>
+         <a href="pages/catalog.html" class="product__button" target="blank" >Browse All Product</a>
       </div>
    </section>
 
