--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                <path d="M0 23V20.31H32V23H0ZM0 12.76V10.07H32V12.76H0ZM0 2.69V0H32V2.69H0Z" fill="#E8E8E8" />
             </svg>
             <!-- account  -->
-            <a class="header-right__account" href="#" target="_blank">
+            <a class="header-right__account" href="pages/registration.html" target="_blank">
                <svg class="header-right-account__img" width="29" height="29" viewBox="0 0 29 29" fill="none"
                   xmlns="http://www.w3.org/2000/svg">
                   <path
@@ -101,7 +101,7 @@
             <!-- Card-1  -->
             <div class="product__card">
                <img src="assets/img/main/product-card1.jpg" alt="product card" class="product-card__img">
-               <a href="pages/cart.html" class="product-card__name" target="_blank">
+               <a href="pages/product.html" class="product-card__name" target="_blank">
                   <h5 class="product-card__h5">ELLERY X M'O CAPSULE</h5>
                   <p class="product-card__text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
                   <p class="product-card__text-options">$52.00</p>
@@ -110,7 +110,7 @@
             <!-- Card-2  -->
             <div class="product__card">
                <img src="assets/img/main/product-card2.jpg" alt="product card" class="product-card__img">
-               <a href="pages/cart.html" class="product-card__name" target="_blank">
+               <a href="pages/product.html" class="product-card__name" target="_blank">
                   <h5 class="product-card__h5">ELLERY X M'O CAPSULE</h5>
                   <p class="product-card__text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
                   <p class="product-card__text-options">$52.00</p>
@@ -119,7 +119,7 @@
             <!-- Card-3  -->
             <div class="product__card">
                <img src="assets/img/main/product-card3.jpg" alt="product card" class="product-card__img">
-               <a href="pages/cart.html" class="product-card__name" target="_blank">
+               <a href="pages/product.html" class="product-card__name" target="_blank">
                   <h5 class="product-card__h5">ELLERY X M'O CAPSULE</h5>
                   <p class="product-card__text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
                   <p class="product-card__text-options">$52.00</p>
@@ -128,7 +128,7 @@
             <!-- Card-4  -->
             <div class="product__card">
                <img src="assets/img/main/product-card4.jpg" alt="product card" class="product-card__img">
-               <a href="pages/cart.html" class="product-card__name" target="_blank">
+               <a href="pages/product.html" class="product-card__name" target="_blank">
                   <h5 class="product-card__h5">ELLERY X M'O CAPSULE</h5>
                   <p class="product-card__text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
                   <p class="product-card__text-options">$52.00</p>
@@ -137,7 +137,7 @@
             <!-- Card-5  -->
             <div class="product__card">
                <img src="assets/img/main/product-card5.jpg" alt="product card" class="product-card__img">
-               <a href="pages/cart.html" class="product-card__name" target="_blank">
+               <a href="pages/product.html" class="product-card__name" target="_blank">
                   <h5 class="product-card__h5">ELLERY X M'O CAPSULE</h5>
                   <p class="product-card__text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
                   <p class="product-card__text-options">$52.00</p>
@@ -146,7 +146,7 @@
             <!-- Card-6  -->
             <div class="product__card">
                <img src="assets/img/main/product-card6.jpg" alt="product card" class="product-card__img">
-               <a href="pages/cart.html" class="product-card__name" target="_blank">
+               <a href="pages/product.html" class="product-card__name" target="_blank">
                   <h5 class="product-card__h5">ELLERY X M'O CAPSULE</h5>
                   <p class="product-card__text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
                   <p class="product-card__text-options">$52.00</p>
