new Cart page, edited links in pages, pulled out the pages

--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Catalog</title>
    <!-- Style  -->
-   <link rel="stylesheet" href="../css/style.css">
+   <link rel="stylesheet" href="css/style.css">
    <!--FONTAWESOME-->
    <script src="https://kit.fontawesome.com/339d5aa3dd.js" crossorigin="anonymous"></script>
 </head>
@@ -19,8 +19,8 @@
       <div class="container header__wrap">
          <!-- left container -->
          <div class="header__left">
-            <a class="header-left__logo" href="../index.html" target="_blank">
-               <img class="header-left-logo__img" src="../assets/img/header-footer/logo.png" alt="logo BRAND">
+            <a class="header-left__logo" href="index.html" target="_blank">
+               <img class="header-left-logo__img" src="assets/img/header-footer/logo.png" alt="logo BRAND">
             </a>
             <svg class="header-left__search" width="27" height="28" viewBox="0 0 27 28" fill="none"
                xmlns="http://www.w3.org/2000/svg">
@@ -37,7 +37,7 @@
                <path d="M0 23V20.31H32V23H0ZM0 12.76V10.07H32V12.76H0ZM0 2.69V0H32V2.69H0Z" fill="#E8E8E8" />
             </svg>
             <!-- account  -->
-            <a class="header-right__account" href="#" target="_blank">
+            <a class="header-right__account" href="#">
                <svg class="header-right-account__img" width="29" height="29" viewBox="0 0 29 29" fill="none"
                   xmlns="http://www.w3.org/2000/svg">
                   <path
@@ -63,12 +63,13 @@
       <div class="arrivals__wrap container">
          <h3 class="arrivals__h3">NEW ARRIVALS </h3>
          <ul class="arrivals__breadcrumbs">
-            <li class="arrivals-breadcrumbs__list"><a class="arrivals-breadcrumbs__link" href="../index.html">Home</a>
+            <li class="arrivals-breadcrumbs__list"><a class="arrivals-breadcrumbs__link" href="index.html">Home</a>
             </li>
             <li class="arrivals-breadcrumbs__list"><a class="arrivals-breadcrumbs__link" href="catalog.html">Men</a>
             </li>
             <li class="arrivals-breadcrumbs__list"><a class="arrivals-breadcrumbs__link active__bc" href="#">New
-                  Arrivals</a></li>
+                  Arrivals</a>
+            </li>
          </ul>
       </div>
    </aside>
@@ -88,7 +89,7 @@
                         fill="black" />
                   </svg>
                </a>
-               <div class="product__details">
+               <article class="product__details">
                   <details class="product-filter__details">
                      <summary class="product-details__summary">CATEGORY</summary>
                      <ul class="product-details__list">
@@ -143,7 +144,7 @@
                         <li><a class="product-list__link" href="#">Tanks</a></li>
                      </ul>
                   </details>
-               </div>
+               </article>
 
             </div>
             <!-- Options -->
@@ -182,7 +183,7 @@
          <div class="product__grid-wrap">
             <!-- Card-1  -->
             <div class="product__card">
-               <img src="../assets/img/catalog/product-card1.jpg" alt="product card" class="product-card__img">
+               <img src="assets/img/catalog/product-card1.jpg" alt="product card" class="product-card__img">
                <a href="product.html" class="product-card__name" target="_blank">
                   <h5 class="product-card__h5">ELLERY X M'O CAPSULE</h5>
                   <p class="product-card__text">Known for her sculptural takes on traditional tailoring, Australian
@@ -192,7 +193,7 @@
             </div>
             <!-- Card-2  -->
             <div class="product__card">
-               <img src="../assets/img/catalog/product-card2.jpg" alt="product card" class="product-card__img">
+               <img src="assets/img/catalog/product-card2.jpg" alt="product card" class="product-card__img">
                <a href="product.html" class="product-card__name" target="_blank">
                   <h5 class="product-card__h5">ELLERY X M'O CAPSULE</h5>
                   <p class="product-card__text">Known for her sculptural takes on traditional tailoring, Australian
@@ -202,7 +203,7 @@
             </div>
             <!-- Card-3  -->
             <div class="product__card">
-               <img src="../assets/img/catalog/product-card3.jpg" alt="product card" class="product-card__img">
+               <img src="assets/img/catalog/product-card3.jpg" alt="product card" class="product-card__img">
                <a href="product.html" class="product-card__name" target="_blank">
                   <h5 class="product-card__h5">ELLERY X M'O CAPSULE</h5>
                   <p class="product-card__text">Known for her sculptural takes on traditional tailoring, Australian
@@ -212,7 +213,7 @@
             </div>
             <!-- Card-4  -->
             <div class="product__card">
-               <img src="../assets/img/catalog/product-card4.jpg" alt="product card" class="product-card__img">
+               <img src="assets/img/catalog/product-card4.jpg" alt="product card" class="product-card__img">
                <a href="product.html" class="product-card__name" target="_blank">
                   <h5 class="product-card__h5">ELLERY X M'O CAPSULE</h5>
                   <p class="product-card__text">Known for her sculptural takes on traditional tailoring, Australian
@@ -222,7 +223,7 @@
             </div>
             <!-- Card-5  -->
             <div class="product__card">
-               <img src="../assets/img/catalog/product-card5.jpg" alt="product card" class="product-card__img">
+               <img src="assets/img/catalog/product-card5.jpg" alt="product card" class="product-card__img">
                <a href="product.html" class="product-card__name" target="_blank">
                   <h5 class="product-card__h5">ELLERY X M'O CAPSULE</h5>
                   <p class="product-card__text">Known for her sculptural takes on traditional tailoring, Australian
@@ -232,7 +233,7 @@
             </div>
             <!-- Card-6  -->
             <div class="product__card">
-               <img src="../assets/img/catalog/product-card6.jpg" alt="product card" class="product-card__img">
+               <img src="assets/img/catalog/product-card6.jpg" alt="product card" class="product-card__img">
                <a href="product.html" class="product-card__name" target="_blank">
                   <h5 class="product-card__h5">ELLERY X M'O CAPSULE</h5>
                   <p class="product-card__text">Known for her sculptural takes on traditional tailoring, Australian
@@ -242,7 +243,7 @@
             </div>
             <!-- Card-7  -->
             <div class="product__card">
-               <img src="../assets/img/catalog/product-card7.jpg" alt="product card" class="product-card__img">
+               <img src="assets/img/catalog/product-card7.jpg" alt="product card" class="product-card__img">
                <a href="product.html" class="product-card__name" target="_blank">
                   <h5 class="product-card__h5">ELLERY X M'O CAPSULE</h5>
                   <p class="product-card__text">Known for her sculptural takes on traditional tailoring, Australian
@@ -252,7 +253,7 @@
             </div>
             <!-- Card-8  -->
             <div class="product__card">
-               <img src="../assets/img/catalog/product-card8.jpg" alt="product card" class="product-card__img">
+               <img src="assets/img/catalog/product-card8.jpg" alt="product card" class="product-card__img">
                <a href="product.html" class="product-card__name" target="_blank">
                   <h5 class="product-card__h5">ELLERY X M'O CAPSULE</h5>
                   <p class="product-card__text">Known for her sculptural takes on traditional tailoring, Australian
@@ -262,7 +263,7 @@
             </div>
             <!-- Card-9  -->
             <div class="product__card">
-               <img src="../assets/img/catalog/product-card9.jpg" alt="product card" class="product-card__img">
+               <img src="assets/img/catalog/product-card9.jpg" alt="product card" class="product-card__img">
                <a href="product.html" class="product-card__name" target="_blank">
                   <h5 class="product-card__h5">ELLERY X M'O CAPSULE</h5>
                   <p class="product-card__text">Known for her sculptural takes on traditional tailoring, Australian
@@ -352,7 +353,7 @@
       <div class="subscribe__wrap container">
          <!-- Subscribe info -->
          <div class="subscribe__info">
-            <img class="subscribe-info__img" src="../assets/img/header-footer/footer-avatar.png" width="96" height="96"
+            <img class="subscribe-info__img" src="assets/img/header-footer/footer-avatar.png" width="96" height="96"
                alt="">
             <h4 class="subscribe-info__h4">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, <span
                   class="subscribe-info__h4-span">a pulvinar
@@ -388,7 +389,7 @@
    </footer> <!-- Footer end -->
 
    <!-- Script  -->
-   <script src="../assets/js/script.js"></script>
+   <script src="assets/js/script.js"></script>
 </body>
 
 </html>
