--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                <path d="M0 23V20.31H32V23H0ZM0 12.76V10.07H32V12.76H0ZM0 2.69V0H32V2.69H0Z" fill="#E8E8E8" />
             </svg>
             <!-- account  -->
-            <a class="header-right__account" href="pages/registration.html" target="_blank">
+            <a class="header-right__account" href="registration.html">
                <svg class="header-right-account__img" width="29" height="29" viewBox="0 0 29 29" fill="none"
                   xmlns="http://www.w3.org/2000/svg">
                   <path
@@ -46,7 +46,7 @@
                </svg>
             </a>
             <!-- cart  -->
-            <a class="header-right__cart" href="pages/cart.html">
+            <a class="header-right__cart" href="cart.html">
                <svg class="header-right-cart__img" width="32" height="29" viewBox="0 0 32 29" fill="none"
                   xmlns="http://www.w3.org/2000/svg">
                   <path
@@ -68,14 +68,14 @@
 
    <!-- Categories -->
    <section class="categories">
-      <div class="container categories__wrap">
+      <article class="container categories__wrap">
          <!-- card-1  -->
          <a href="#" class="categories__card categories__card1">
             <h5 class="categories-wrap__h5">30% OFF</h5>
             <h3 class="categories-wrap__h3">FOR WOMEN</h3>
          </a>
          <!-- card-2  -->
-         <a href="pages/catalog.html" class="categories__card categories__card2">
+         <a href="catalog.html" class="categories__card categories__card2">
             <h5 class="categories-wrap__h5">HOT DEAL</h5>
             <h3 class="categories-wrap__h3">FOR MEN</h3>
          </a>
@@ -89,12 +89,12 @@
             <h5 class="categories-wrap__h5">LUXIROUS & TRENDY</h5>
             <h3 class="categories-wrap__h3">ACCESORIES</h3>
          </a>
-      </div>
+      </article>
    </section>
 
    <!-- Product  -->
    <section class="product">
-      <div class="container product__wrap">
+      <article class="container product__wrap">
          <h2 class="product__h2">Fetured Items
          </h2>
          <p class="product__text">Shop for items based on what we featured in this week
@@ -103,60 +103,66 @@
             <!-- Card-1  -->
             <div class="product__card">
                <img src="assets/img/main/product-card1.jpg" alt="product card" class="product-card__img">
-               <a href="pages/product.html" class="product-card__name" target="_blank">
+               <a href="product.html" class="product-card__name" target="_blank">
                   <h5 class="product-card__h5">ELLERY X M'O CAPSULE</h5>
-                  <p class="product-card__text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                  <p class="product-card__text">Known for her sculptural takes on traditional tailoring, Australian
+                     arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
                   <p class="product-card__text-options">$52.00</p>
                </a>
             </div>
             <!-- Card-2  -->
             <div class="product__card">
                <img src="assets/img/main/product-card2.jpg" alt="product card" class="product-card__img">
-               <a href="pages/product.html" class="product-card__name" target="_blank">
+               <a href="product.html" class="product-card__name" target="_blank">
                   <h5 class="product-card__h5">ELLERY X M'O CAPSULE</h5>
-                  <p class="product-card__text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                  <p class="product-card__text">Known for her sculptural takes on traditional tailoring, Australian
+                     arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
                   <p class="product-card__text-options">$52.00</p>
                </a>
             </div>
             <!-- Card-3  -->
             <div class="product__card">
                <img src="assets/img/main/product-card3.jpg" alt="product card" class="product-card__img">
-               <a href="pages/product.html" class="product-card__name" target="_blank">
+               <a href="product.html" class="product-card__name" target="_blank">
                   <h5 class="product-card__h5">ELLERY X M'O CAPSULE</h5>
-                  <p class="product-card__text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                  <p class="product-card__text">Known for her sculptural takes on traditional tailoring, Australian
+                     arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
                   <p class="product-card__text-options">$52.00</p>
                </a>
             </div>
             <!-- Card-4  -->
             <div class="product__card">
                <img src="assets/img/main/product-card4.jpg" alt="product card" class="product-card__img">
-               <a href="pages/product.html" class="product-card__name" target="_blank">
+               <a href="product.html" class="product-card__name" target="_blank">
                   <h5 class="product-card__h5">ELLERY X M'O CAPSULE</h5>
-                  <p class="product-card__text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                  <p class="product-card__text">Known for her sculptural takes on traditional tailoring, Australian
+                     arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
                   <p class="product-card__text-options">$52.00</p>
                </a>
             </div>
             <!-- Card-5  -->
             <div class="product__card">
                <img src="assets/img/main/product-card5.jpg" alt="product card" class="product-card__img">
-               <a href="pages/product.html" class="product-card__name" target="_blank">
+               <a href="product.html" class="product-card__name" target="_blank">
                   <h5 class="product-card__h5">ELLERY X M'O CAPSULE</h5>
-                  <p class="product-card__text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                  <p class="product-card__text">Known for her sculptural takes on traditional tailoring, Australian
+                     arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
                   <p class="product-card__text-options">$52.00</p>
                </a>
             </div>
             <!-- Card-6  -->
             <div class="product__card">
                <img src="assets/img/main/product-card6.jpg" alt="product card" class="product-card__img">
-               <a href="pages/product.html" class="product-card__name" target="_blank">
+               <a href="product.html" class="product-card__name" target="_blank">
                   <h5 class="product-card__h5">ELLERY X M'O CAPSULE</h5>
-                  <p class="product-card__text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                  <p class="product-card__text">Known for her sculptural takes on traditional tailoring, Australian
+                     arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
                   <p class="product-card__text-options">$52.00</p>
                </a>
             </div>
          </div>
-         <a href="pages/catalog.html" class="product__button" target="blank" >Browse All Product</a>
-      </div>
+         <a href="catalog.html" class="product__button" target="blank">Browse All Product</a>
+      </article>
    </section>
 
 
