edited links on all pages, edited Cart Page

--- a/catalog.html
+++ b/catalog.html
@@ -56,7 +56,7 @@
             </a>
          </div>
       </div>
-   </header>
+   </header> <!-- Header end -->
 
    <!-- New arrivals -->
    <aside class="arrivals">
@@ -72,7 +72,7 @@
             </li>
          </ul>
       </div>
-   </aside>
+   </aside> <!-- New arrivals end -->
 
    <!-- Product  -->
    <section class="product">
@@ -288,7 +288,7 @@
             </li>
          </ul>
       </div>
-   </section>
+   </section> <!-- Product end -->
 
    <!-- Feature -->
    <aside class="feature">
@@ -346,7 +346,7 @@
       </div>
 
 
-   </aside> <!-- Features end -->
+   </aside> <!-- Feature end -->
 
    <!-- Subscribe -->
    <aside class="subscribe">
@@ -354,7 +354,7 @@
          <!-- Subscribe info -->
          <div class="subscribe__info">
             <img class="subscribe-info__img" src="assets/img/header-footer/footer-avatar.png" width="96" height="96"
-               alt="">
+               alt="avatar">
             <h4 class="subscribe-info__h4">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, <span
                   class="subscribe-info__h4-span">a pulvinar
                   purus condimentum“</span></h4>
