--- a/product.html
+++ b/product.html
@@ -56,7 +56,7 @@
             </a>
          </div>
       </div>
-   </header>
+   </header> <!-- Header end -->
 
    <!-- New arrivals -->
    <aside class="arrivals">
@@ -71,7 +71,7 @@
                   Arrivals</a></li>
          </ul>
       </div>
-   </aside>
+   </aside> <!-- New arrivals end -->
 
    <!-- Subscribe -->
    <aside class="subscribe">
