--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </a>
          </div>
       </div>
-   </header>
+   </header> <!-- Header end -->
 
    <!-- Promo logo -->
    <section class="promo">
@@ -64,7 +64,7 @@
          <h1 class="promo__h1">THE BRAND<br><span class="promo__span">OF LUXERIOUS <span
                   class="promo__span-color">FASHION</span> </span></h1>
       </div>
-   </section>
+   </section> <!-- Promo logo end -->
 
    <!-- Categories -->
    <section class="categories">
@@ -90,7 +90,7 @@
             <h3 class="categories-wrap__h3">ACCESORIES</h3>
          </a>
       </article>
-   </section>
+   </section> <!-- Categories end -->
 
    <!-- Product  -->
    <section class="product">
@@ -163,7 +163,7 @@
          </div>
          <a href="catalog.html" class="product__button" target="blank">Browse All Product</a>
       </article>
-   </section>
+   </section> <!-- Product end -->
 
 
    <!-- Feature -->
@@ -221,7 +221,7 @@
          </div>
       </div>
 
-   </aside> <!-- Features end -->
+   </aside> <!-- Feature end -->
 
    <!-- Subscribe -->
    <aside class="subscribe">
@@ -229,7 +229,7 @@
          <!-- Subscribe info -->
          <div class="subscribe__info">
             <img class="subscribe-info__img" src="assets/img/header-footer/footer-avatar.png" width="96" height="96"
-               alt="">
+               alt="avatar">
             <h4 class="subscribe-info__h4">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, <span
                   class="subscribe-info__h4-span">a pulvinar
                   purus condimentum“</span></h4>
